--- a/package.json
+++ b/package.json
@@ -13,15 +13,19 @@
     "test": "jest"
   },
   "dependencies": {
+    "bluebird": "^3.5.2",
     "deepmerge": "^2.1.1",
     "express": "^4.16.3",
     "node-fetch": "^2.2.0",
+    "redis": "^2.8.0",
     "typescript": "^3.0.3"
   },
   "devDependencies": {
+    "@types/bluebird": "^3.5.24",
     "@types/deepmerge": "^2.1.0",
     "@types/express": "^4.16.0",
     "@types/node-fetch": "^2.1.2",
+    "@types/redis": "^2.8.6",
     "@types/typescript": "^2.0.0",
     "nodemon": "^1.18.4",
     "rimraf": "^2.6.2"
